# defi-cli

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  SKILL.md  mcp-config.example.json  prepare.py  program.md  pyproject.toml  results.tsv
.github/workflows/: ci.yml  release.yml
.omc/: project-memory.json
.omc/specs/: deep-interview-mantle-cli.md  deep-interview-mcp-growth.md  deep-interview-parallel-scan.md
.omc/state/: agent-replay-2c019e77-806b-4a72-b477-db1f3b13fa91.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.serena/: project.yml
config/: chains.toml
config/tokens/: abstract.toml  arbitrum.toml  avalanche.toml  base.toml  bnb.toml  canto.toml  celo.toml  ethereum.toml  gnosis.toml  harmony.toml  hyperevm.toml  ink.toml  kava.toml  mantle.toml  moonriver.toml  polygon.toml  rootstock.toml  sei.toml  sonic.toml  taiko.toml  zksync.toml
crates/defi-cli/: Cargo.toml
crates/defi-cli/src/: agent.rs  executor.rs  main.rs  output.rs  table.rs
crates/defi-cli/src/commands/: alert.rs  arb.rs  bridge.rs  cdp.rs  compare.rs  dex.rs  gauge.rs  lending.rs  mod.rs  monitor.rs  portfolio.rs  positions.rs  price.rs  scan.rs  schema.rs  staking.rs  status.rs  swap.rs  token.rs  vault.rs  wallet.rs  whales.rs  yield_cmd.rs
crates/defi-core/: Cargo.toml
crates/defi-core/src/: erc20.rs  error.rs  lib.rs  multicall.rs  provider.rs  types.rs
crates/defi-core/src/registry/: chain.rs  mod.rs  protocol.rs  token.rs
crates/defi-core/src/traits/: bridge.rs  cdp.rs  derivatives.rs  dex.rs  gauge.rs  lending.rs  liquid_staking.rs  mod.rs  options.rs  oracle.rs  vault.rs  yield_aggregator.rs  yield_source.rs
crates/defi-mcp/: Cargo.toml
crates/defi-mcp/src/: main.rs
crates/defi-protocols/: Cargo.toml
crates/defi-protocols/src/: factory.rs  lib.rs
crates/defi-protocols/src/bridge/: generic_bridge.rs  hyperlane_bridge.rs  hyperliquid.rs  mod.rs
crates/defi-protocols/src/cdp/: felix.rs  felix_oracle.rs  mod.rs
crates/defi-protocols/src/derivatives/: generic_derivatives.rs  hlp.rs  mod.rs
crates/defi-protocols/src/dex/: algebra_v3.rs  balancer_v3.rs  curve.rs  dex_price.rs  mod.rs  solidly.rs  solidly_gauge.rs  uniswap_v2.rs  uniswap_v3.rs  woofi.rs
crates/defi-protocols/src/lending/: aave_oracle.rs  aave_v3.rs  compound_v2.rs  compound_v3.rs  euler_v2.rs  mod.rs  morpho.rs
crates/defi-protocols/src/liquid_staking/: generic_lst.rs  kinetiq.rs  mod.rs  sthype.rs
crates/defi-protocols/src/options/: generic_options.rs  mod.rs  rysk.rs
crates/defi-protocols/src/vault/: erc4626.rs  mod.rs
crates/defi-protocols/src/yield_aggregator/: mod.rs
crates/defi-protocols/src/yield_source/: generic_yield.rs  mod.rs  pendle.rs
crates/mantle-cli/: CONTENT_PLAN.md  Cargo.toml  README.md  REMOTION_PROMPT.md  X_THREAD.md  demo.sh
crates/mantle-cli/src/: main.rs
crates/mantle-cli/src/commands/: bridge.rs  lending.rs  mod.rs  positions.rs  scan.rs  status.rs  swap.rs  whales.rs  yield_cmd.rs
docs/: DEFI_CATEGORIES.md  QA_WORKFLOW.md  protocol_discovery.md
docs/qa-reports/: 2026-05-05-coverage-baseline.md  2026-05-05-test-foundation.md  2026-05-05-v1-0-12-baseline.md  2026-05-16-cli-command-qa.md
npm/: .gitignore  install.js  package.json
skills/defi-cli/: SKILL.md
src/defi_cli/: __init__.py  agent.py  approve.py  bridge.py  cdp.py  cli.py  config.py  dashboard.py  decimals.py  decoder.py  dex.py  events.py  executor.py  gas.py  (+21 more)
tests/: conftest.py  test_agent.py  test_agent_workflow.py  test_approve.py  test_bridge.py  test_cdp.py  test_cli.py  test_cli_commands.py  test_config.py  test_dashboard.py  test_decimals.py  test_decoder.py  test_dex.py  test_events.py  test_executor.py  test_fetcher.py  test_flashloan.py  test_gas.py  test_health.py  test_integration.py  test_lending.py  test_liquidation.py  test_live_dryrun.py  test_multicall.py  test_multichain.py  test_permit.py  test_pipeline.py  test_positions.py  test_price.py  test_projectx_nest.py  test_quote.py  test_rates.py  test_simulator.py  test_slippage.py  test_tracker.py  test_transfer.py  test_vault.py  test_wallet.py  test_wrap.py  test_yield.py
ts/: package.json  pnpm-lock.yaml  vitest.config.ts
(+560 files in other folders)
