[workspace]
resolver = "2"
members = [
    "crates/defi-core",
    "crates/defi-protocols",
    "crates/defi-cli",
    "crates/defi-mcp",
    "crates/mantle-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# EVM
alloy = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Schema
schemars = "0.8"

# Error
thiserror = "2"
eyre = "0.6"

# MCP
rmcp = { version = "0.1", features = ["server", "transport-stdio"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
