[package]
name = "defi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "defi"
path = "src/main.rs"

[dependencies]
defi-core = { path = "../defi-core" }
defi-protocols = { path = "../defi-protocols" }
alloy = { workspace = true, features = ["full"] }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5.8"
reqwest = { version = "0.12", features = ["json"] }
comfy-table.workspace = true
