[package]
name = "defi-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
defi-core = { path = "../defi-core" }
tokio.workspace = true
async-trait.workspace = true
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
url = "2"
